# NetBridge

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeHelpers.cmake  README.md
client/: .gitignore  CMakeLists.txt
client/resources/: NetBridge.xml
client/src/: common.h  connection_event_emitter_interface.h  core_command_interface.h  logs_event_emitter_interface.h  main.cpp  main_event_emitter_interface.h
client/src/bridge/: bridge_client.cpp  bridge_client.h  connection.h  host.cpp  host.h  hosts_container.cpp  hosts_container.h
client/src/bridge/forwarder/: forwarder.cpp  forwarder.h  forwarder_peer.cpp  forwarder_peer.h  forwarder_peer_interface.h
client/src/bridge/incoming_forwarder/: incoming_tcp_forwarder.cpp  incoming_tcp_forwarder.h  incoming_udp_forwarder.cpp  incoming_udp_forwarder.h
client/src/bridge/outgoing_forwarder/: outgoing_forwarder_interface.h  outgoing_tcp_forwarder.cpp  outgoing_tcp_forwarder.h  outgoing_tcp_forwarder_manager.cpp  outgoing_tcp_forwarder_manager.h  outgoing_udp_forwarder.cpp  outgoing_udp_forwarder.h  outgoing_udp_forwarder_manager.cpp  outgoing_udp_forwarder_manager.h
client/src/config/: config.cpp  config.h
client/src/core/: core.cpp  core.h
client/src/machineid/: machineid.cpp  machineid.h
client/src/store/: store.cpp  store.h  store_interface.h
client/src/ui/: connection_event_emitter.cpp  connection_event_emitter.h  incoming_connections_dialog.cpp  incoming_connections_dialog.h  incoming_connections_dialog.ui  logs_console.ui  logs_console_dialog.cpp  logs_console_dialog.h  logs_console_event_emitter.cpp  logs_console_event_emitter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_event_emitter.cpp  mainwindow_event_emitter.h  outgoing_connections_dialog.cpp  outgoing_connections_dialog.h  outgoing_connections_dialog.ui
server/: CMakeLists.txt
server/src/: main.cpp
server/src/bridge/: #command_processor.cpp#  bridge_core.cpp  bridge_core.h  command_processor.cpp  command_processor.h  host.cpp  host.h  hosts_container.cpp  hosts_container.h
server/src/bridge/commands/: abstract_command.cpp  abstract_command.h  command_interface.h  delete_relationship.cpp  delete_relationship.h  discover.cpp  discover.h  forward.cpp  forward.h  register.cpp  register.h
server/src/bridge/forwarder/: forwarder_interface.h  forwarder_tcp.cpp  forwarder_tcp.h  forwarder_udp.cpp  forwarder_udp.h
sgxclib/: CMakeLists.txt  README.md
sgxclib/sgxlib/: callback_registrator.hpp  date.hpp  placeholder_template.hpp  rand.hpp  string.hpp  struct_caster.hpp  utility.hpp
sgxclib/sgxlib/logger/: logger.hpp  simple_logger.hpp
sgxclib/sgxlib/net/: client_interface.h  exception.hpp  ip.cpp  ip.h  server_interface.h  socket_interface.h
sgxclib/sgxlib/net/boost/: client.cpp  client.h  server.cpp  server.h  socket.hpp
shared/: CMakeLists.txt
shared/proto/: command.h
